# jaxrl

./: .gitignore  CLAUDE.md  README.md  download-models.sh  koth-train.sh  package-lock.json  package.json  pyproject-old.toml  pyproject.toml  requirements.txt
config/: baseline.json  basic.json  blog_10_layers.json  blog_12_layers.json  blog_14_layers.json  blog_16_layers.json  blog_256_width.json  blog_2_head.json  blog_2_layers.json  blog_32_layers.json  blog_4_head.json  blog_4_layers.json  blog_64_width.json  blog_8_layers.json  blog_baseline.json  blog_ff_1024.json  blog_ff_512.json  config.json  craftax.json  craftax_repo.json  craftax_repo_test.json  envpool_frogger.json  gigastep.json  hidden_features_256.json  hoth.json  koth.json  koth2.json  koth_10_layers.json  koth_2_layers.json  koth_4_layers.json  koth_6_layers.json  koth_8_layers.json  large.json  med.json  mega.json  mega2.json  multitask.json  nback.json  normalize_advantage.json  num_kv_heads_1.json  (+23 more)
docs/: experiments.md
jaxrl/: benchmark.py  checkpointer.py  cli.py  config.py  constants.py  create_job.py  distributions.py  eval.py  experiment.py  hl_gauss.py  live_training_visualizer.py  logger.py  model.py  networks.py  optimizer.py  play.py  play_craftax.py  resnet.py  rollout.py  runs.py  sweep.py  train.py  trainer.py  types.py  util.py  values.py
jaxrl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
jaxrl/envs/: atari.py  client.py  craftax_wrapper.py  create.py  env_config.py  environment.py  envpool.py  gym.py  jumanji.py  map_generator.py  mem_reverse_seq.py  multiplex.py  multitask.py  specs.py  task_id.py  task_id_wrapper.py  vector.py  vmap_wrapper.py  wrapper.py
jaxrl/envs/gridworld/: constance.py  explore.py  grid_return.py  king_hill.py  renderer.py  return.py  scouts.py  traveling_salesman.py  util.py
jaxrl/envs/memory/: explore.py  (+8 more)
jaxrl/gemma/: helpers.py  helpers_test.py  layers.py  layers_test.py  main.py  modules.py  modules_test.py  params.py  positional_embeddings.py  positional_embeddings_test.py  sampler.py  sampler_test.py  sow_lib.py  transformer.py  transformer_test.py
jaxrl/metrics/: cumulative_reward.py
jaxrl/model/: attention.py  attention_test.py  feed_forward.py  network.py  observation.py  positional_embeddings.py  rnn_bench.py
jaxrl/systems/: actor_critic.py  types.py
jaxrl/transformer/: attention.py  attention_test.py  feed_forward.py  gate.py  network.py  observation.py  positional_embeddings.py  rnn.py  rnn_bench.py  rollout.py  test.py  train.py  transformer.py
jaxrl/utils/: live_skill_plot.py  preturb.py  video_writter.py
mapox_trainer/: checkpointer.py  cli.py  config.py  eval.py  experiment.py  logger.py  optimizer.py  play.py  play_craftax.py  rollout.py  runs.py  train.py  util.py  values.py
mapox_trainer/model/: attention.py  network.py  observation.py  rnn.py
mapox_trainer/utils/: ranking_plot.py
reports/: experiments.md  lib.py
reports/depth-scaling/: analyze.py  report.md
tests/: test_advantage.py  test_attention.py  test_rope.py  test_util.py  test_values.py
tfjs_poc/: convert_weights.py  export_weights.py  index.html  model.ts  test_node.mjs  tsconfig.json
(+2 files in other folders)
