[project]
name = "jaxrl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chex>=0.1.89",
    "distrax>=0.1.5",
    "einops>=0.8.1",
    "flax>=0.10.6",
    "fsspec[gcs]>=2025.5.1",
    "gcsfs>=2025.5.1",
    "jax>=0.6.0",
    "jaxtyping>=0.3.2",
    "jumanji>=0.3.1",
    "optax>=0.2.4",
    "optuna>=4.3.0",
    "optuna-dashboard>=0.18.0",
    "orbax>=0.1.9",
    "pydantic>=2.11.4",
    "pygame-ce>=2.5.4",
    "python-ffmpeg>=2.0.12",
    "rich>=14.0.0",
    "rlax>=0.1.7",
    "tensorboardx>=2.6.2.2",
    "typer>=0.15.3",
    "wandb>=0.19.10",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda12]",
]
tpu = [
    "jax[tpu]",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# look for packages in the project root …
where = ["."]
# … but only accept the real python package
include = ["jaxrl*"]
# ignore non-python top-level folders that confused the auto-discovery
exclude = ["config*", "videos*"]
